--- a/index.css
+++ b/index.css
@@ -14,6 +14,8 @@ body {
     height: 80px;
     width: 300px;
     margin: 20px auto;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 #calc_body {
@@ -30,8 +32,9 @@ body {
     background: white;
     width: calc((100% - 3px) / 4);
     height: 50px;
-    line-height: 50px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #calc_body>div:hover {
@@ -48,8 +51,11 @@ body {
 
 .del {
     background: #FF3B2F !important;
-    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 
 .divide {
     font-size: 20px;
@@ -57,4 +63,20 @@ body {
 
 .multiply {
     line-height: 58px !important;
+}
+
+#top_bar {
+    display: flex;
+    justify-content: space-between;
+    color: #0878F0;
+    height: 50px;
+    line-height: 50px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    font-weight: bold;
+}
+
+#top_bar>span {
+    display: flex;
+    align-items: center;
 }
