--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-size: 24px;
+    font-family: 'Yuanti SC', 'PingFangSC-Regular';
 }
 
 body {
@@ -30,14 +31,14 @@ body {
 
 #calc_body>div {
     background: white;
-    width: calc((100% - 3px) / 4);
+    width: calc((100% - 2px) / 3);
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#calc_body>div:hover {
+#calc_body>div:focus {
     background: #E6E5EB;
 }
 
@@ -49,29 +50,15 @@ body {
     border-top: 1px solid #ededed;
 }
 
-.del {
-    background: #FF3B2F !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.divide {
-    font-size: 20px;
-}
-
-.multiply {
-    line-height: 58px !important;
-}
 
 #top_bar {
     display: flex;
     justify-content: space-between;
+    flex-direction: row-reverse;
     color: #0878F0;
     height: 50px;
     line-height: 50px;
-    padding: 0 10px;
+    padding: 0 20px;
     box-sizing: border-box;
     font-weight: bold;
 }
