--- a/index.css
+++ b/index.css
@@ -4,7 +4,9 @@
     font-size: 24px;
     font-family: 'Yuanti SC', 'PingFangSC-Regular';
 }
-
+html {
+    touch-action: manipulation;
+}
 body {
     background: #F3F2F8;
 }
